Fix baseline on mobile.

--- a/src/stylesheets/layout/_main.scss
+++ b/src/stylesheets/layout/_main.scss
@@ -22,12 +22,13 @@ body {
       font-size: 1.5rem;
       margin: 1rem 0 0;
       padding: 0;
-      text-align: left;
+      text-align: center;
 
       @media screen and (min-width: 500px) {
         float: right;
         font-size: 1.3rem;
         margin: -3.5rem 0 0 0;
+        text-align: left;
         width: 15.5rem
       }
     }
